--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
